MSI release + SAC workarounds + autostart Task-Manager-kill-switch heal
- plain .msi release task (signAppImage -> jpackageMsi -> signMsi): msiexec
  processes it even where SAC blocks unsigned exe launchers (verified live)
- installer packs the SIGNED app image (--app-image); installed exe is signed
- StartupService: detect+clear the Explorer StartupApproved kill-switch
  (Task Manager toggle / OEM cleanup) on every ensureRegistered; test 37
- packaging/sign-trusted.ps1 + gradle signTrusted: one-command re-sign with a
  real CA cert (SignPath Foundation free-OSS path in docs/signing.md)
- README: MSI-first install, SAC explainer, Temurin java.exe workaround
- gitignore: launch-video/ and .mimosa/ (local tooling, not repo content)